# fiap-video-processor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __main__.py  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build_and_deploy.yaml  sonarcloud.yml
adapters/input/: sqs_in_handler.py
alembic/: env.py
alembic/versions/: v1_create_tb_conversion.py
infra/: main.tf  variables.tf
server/: __init__.py  __main__.py  env.py  exception_handler.py
server/adapters/: __init__.py  abc_base_s3.py  aws_services_enum.py
server/adapters/input/: sqs_in_handler.py
server/adapters/input/s3/handler/: s3_in_handler.py
server/adapters/input/sqs/dto/: conversion_base_dto.py  conversion_in_dto.py
server/adapters/input/sqs/handler/: sqs_in_handler.py
server/adapters/input/sqs/mapper/: conversion_in_mapper.py
server/adapters/output/database/: __init__.py  conversion_model.py  conversions_repository.py
server/adapters/output/s3/handler/: s3_out_handler.py
server/domain/entity/: conversion_entity.py
server/domain/repository/: abc_conversion_repository.py
server/domain/service/: conversion_service.py
server/domain/usecase/: abc_conversion_usecase.py
server/test/: __init__.py
server/test/integration/: __init__.py  test_s3_integration.py  test_s3_output.py
server/test/integration/adapters/: __init__.py  test_s3_input.py  test_s3_output.py  test_sqs_input.py  test_sqs_output.py
server/test/integration/service/: test_conversion_entity.py
server/tools/: logging.py
(+4 files in other folders)
