[tool.black]
target-version = ['py311']
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["fiap-video-processor"]

[project]
name = "fiap-video-processor"
version = "0.1.0"
dependencies = [
    "aioboto3==13.3.0",
    "aiobotocore==2.16.0",
    "boto3==1.35.81",
    "botocore==1.35.81",
    "asyncio==3.4.3",
    "pre-commit==4.0.1",
    "coverage==7.6.10",
    "sqlalchemy==2.0.37",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "pytest==8.3.4"
]
